fs-claims-Pradeep_Dev_Deployment_Branch/fs-claims-Pradeep_Dev_Deployment_Branch/k8s/storybook/claim-integration-service/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: claim-integration-service-deployment
    namespace: claim-apps
  spec:
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
    replicas: 1
    selector:
      matchLabels:
        app: claim-integration-service
    template:
      metadata:
        labels:
          app: claim-integration-service
      spec:
        imagePullSecrets:
          - name: jfrog-registry-secret     
        containers:
          - name: claim-integration-service-container
            image: jfrog.shawinc.io/docker-local/claim-integration-service:latest
            imagePullPolicy: Always
            ports:
              - containerPort: 8081
            resources:
              requests:
                memory: "512Mi"
                cpu: "150m"
              limits:
                memory: "1500Mi"
                cpu: "500m"
            # livenessProbe:
            #   httpGet:
            #     path: /claim/integration/actuator/health  # Adjusted path for liveness probe
            #     port: 8081
            #   initialDelaySeconds: 30
            #   periodSeconds: 10
            #   timeoutSeconds: 5
            #   failureThreshold: 3
            # readinessProbe:
            #   httpGet:
            #     path: /claim/integration/actuator/health  # Adjusted path for readiness probe
            #     port: 8081
              # initialDelaySeconds: 5
              # periodSeconds: 10
              # timeoutSeconds: 5
              # failureThreshold: 3
