fs-claims-Pradeep_Dev_Deployment_Branch/fs-claims-Pradeep_Dev_Deployment_Branch/k8s/storybook/claim-integration-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: claim-integration-service
  namespace: claim-apps
  labels:
    app: claim-integration-service
spec:
  selector:
    app: claim-integration-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
